package map;

public interface IMovable {
    public Coordinates move(); //zwraca wektor przemieszczenia, nie nowe koordynaty!
}