@startuml class_diagram

class Map
{
- int length;
- int width;
- {static} EmptySlot empty;
- IPrintable table;
+ Map(int, int);
+ String toString();
+ void displayMap();
+ IPrintable getField(Coordinates);
+ IPrintable setField(IPrintable, Coordinates);
+ void setField(IPrintable, int, int);
+ void emptyField(Coordinates);
+ int getLength();
+ int getWidth();
}

interface IPrintable
{
+ String toString();
+ String getId();
+ char getRepresentation();
}

abstract class Being
{
- String id;
# Character representation;
+ Being (String, char);
}

abstract class Record
{
- IMovable being;
- Coordinates position;
+ Record(Being, Coordinates);
+ void move();
+ void infectNeighbours(Map);
+ void progressIllness();
+ void performRecovery();
+ void setVerHor(Coordinates);
+ Coordinates getVerHor();
+ Being getBeing();
}

interface IRecord
{
+ void move();
+ int[] getVerHor();
+ void setVerHor(Coordinates);
+ void infectNeighbours(Map);
+ void progressIllness();
+ void performRecovery();
}

class BeingContainer
{
- List<Record> list;
- Map map;
+ BeingContainer(Map map);
+ List<Record> getList();
+ Map getMap();
+ void performMovementRound();
+ void InfectRound();
+ void PerformDiseaseRound();
+ void PerformRecoveryRound();
}

class EmptySlot
{
+ EmptySlot();
}

interface IDiseaseSensitive
{
+ void PerformIllness();
+ boolean getIsAlive();
+ void recover();
+ List<DiseaseRecord> getDisease();
}

interface IMovable
{
+ int[] move(int[]);
}

class Human
{
- int healthPoints;
- boolean isInfected;
- boolean isAlive;
- int sex;
-  int age;
- {static} int humanCounter;
- List<DiseaseRecord> diseases;
+ Human();
+ Human(int, int);
# Human(int, int, char);
+ String getSex();
+ int getSexValue();
+ int getHealyhPoints();
+ boolean getIsInfected();
+ int getAge();
+ void setHealthPoints(int);
+ void setIsInfected(boolean);
+ void setIsAlive(boolean);
}

class Dice
{
+ {static} int d2();
+ {static} int d2(int);
+ {static} int d4();
+ {static} int d4(int);
+ {static} int d6();
+ {static} int d6(int);
+ {static} int d8();
+ {static} int d8(int);
+ {static} int d10();
+ {static} int d10(int);
+ {static} int d12();
+ {static} int d12(int);
+ {static} int d20();
+ {static} int d20(int);
+ {static} int d100();
+ {static} int d100(int);
}

class Doctor
{
+ Doctor();
+ void heal(Human);
}

abstract class Vehicle
{
- int capacity;
- int velocity
- {static} int numVeh;
- IGPS gps;
- List<IMovable> passengers;
- int numPassengers;
+ Vehicle();
+ Vehicle(String, char, int, int);
+ String toString();
+ Coordinates move();
+ void setPassengers();
+ int getVelocity();
+ int getCapacity();
+ getNumVeh();
+ List<IMovable> getPassengers();
}

abstract class Building
{
    
    
    - {static} int blockCounter;
    - int capacity;
    + Building();
    + Building(String, char, int);
    + void setCapacity(int);
    + int getCapacity();
    + int getBlockCounter();
}

class Ambulance
{
    - {static} int numAmb;
    + Ambulance();
    + Ambulance(String, char, int, int);
    + String toString();
    + int getNumAmb();
}

class Hearse 
{
    - {static} int numHear;
    + Hearse();
    + Hearse(String, char, int, int);
    + String toString();
    + int getNumHear();
}

class Hospital
{
    - {static} int hospitalCounter;
    + Hospital();
    + Hospital(String, char, int);
    + int getHospitalCounter();

}

class Graveyard
{

}

class Dispatching
{

}

abstract class Disease 
{
    - boolean isActive;
    - int timeTilSymptoms;
    - int timeTilInfect;
    - int timeTilCured;
    - String id;
    - int infectionRate;
    - int activeRate;
    + Disease(boolean, String, int, int, int, int)
    # Infector infector;
    + {abstract} progress(Human, DiseaseRecord);
    + {abstract} infect(Human);
    + boolean getIsActive();
    + String getId();
    + int getTimeTilInfect();
    + int getTimeTilCured();
    + int getInfectionRate();
    + int getTimeTilSymptoms();
    + int getActiveRate();
}

class DiseaseRecord 
{
    - Disease disease;
    - boolean isActive;
    - boolean infects;
    - boolean areSymptoms;
    - boolean isCured;
    - int state;
    + Disease(Disease, Human);
    + void infect(Human);
    + void setIsActive(boolean);
    + void setInfects(boolean);
    + void setIsCured(boolean);
    + void setState(int);
    + void setAreSymptom(boolean);
    + String getDiseaseId();
    + boolean getIsActive();
    + boolean getInfects();
    + boolean getIsCured();
    + int getState();
    + boolean getAreSymptoms(); 
}

interface IDisease 
{
    + void infect(Human);
    + void progress(Human, DiseaseRecord);
    + int getInfectionRate();
    + int getActiveRate();
    + int getTimeTilSymptoms();
}

class Infector 
{
    + void performInfection(Human, Disease);
}

class Virus
{
    - int power1;
    - int power2;
    + Virus(Human, int, int);
    + void progress(Human, DiseaseRecord);
    + void infect(Human);
}

class Queue 
{

}

class Coordinates 
{
    - int vertical;
    - int horizontal;
    + Coordinates(int, int);
    + Cooridnates(Cooridnates);
    + String toString();
    + void addVector(Coordinates);
    + Coordinates changedVector(int, int);
    + Coordinates neighboursClockwise(int);
    + void setCoordinates(int, int);
    + void setCoordinates(Coordinates);
    + void setVertical(int);
    + void setHorizontal(int);
    + int getVertical();
    + int getHorizontal();
}

class GPS1
{

}

interface IGPS
{

}

Map o- IPrintable
IPrintable <|-- Being
Being <|-- EmptySlot
IRecord <|-- Record
BeingContainer o- IRecord
Being <|-- Human
IMovable <|-- Human
IDiseaseSensitive <|-- Human
IMovable -o Record
Map *- EmptySlot
Map -o BeingContainer
Human <|-- Doctor
Being <|-- Vehicle
IMovable <|-- Vehicle
Vehicle <|-- Ambulance
Vehicle <|-- Hearse
Being <|-- Building
Building <|-- Hospital
Building <|-- Graveyard
IDisease <|-- Disease
Disease <|-- Virus
Dispatching --* Hospital
Dispatching --* Graveyard
Doctor -- Dice : uses <
IGPS <|-- GPS1
Human *-- DiseaseRecord
Dispatching *--  Queue
Record *-- Coordinates
Vehicle o-- IGPS
Human -- Dice : uses <
Disease *-- Infector
DiseaseRecord *-- Disease
DiseaseRecord -- Dice : uses <
Infector - Dice : uses <
Virus - Dice : uses <

@enduml